Menu Hamburguesa Desarrollo del menú hamburguesa

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laboratorio-de-creacion-digital",
+  "name": "lacdi",
   "version": "1.0.0",
   "description": "",
   "main": "index.html",
